@@ -84,7 +84,7 @@ public class ImportBPUServiceImpl extends BaseServiceImpl implements ImportBPUSe
 
             // end
             String xml = ImportLogFormatter.createStagingXml(numRows, stagingErrors);
-            Boolean hasErrors = new Boolean(stagingErrors.size() != 0);
+            Boolean hasErrors = Boolean.valueOf(stagingErrors.size() != 0);
             vdao.uploadedVersion(importVersionId, xml, hasErrors, userId);
             connection.commit();
         } catch (Exception e) {
